Planning to do a little TDD

--- a/320_intermediate_war-card-game/src/cpp/Makefile
+++ b/320_intermediate_war-card-game/src/cpp/Makefile
@@ -1,7 +1,14 @@
 CXX = clang++
 
-war: main.o
-	$(CXX) -g -Wall -o war main.o
+testwar: war.o testwar.o
+	$(CXX) -g -Wall -pedantic -std=c++11 -o testwar testwar.o war.o -L /usr/local/lib -I /usr/local/include -lgtest
 
-main.o: main.cc
-	$(CXX) -g -Wall -pedantic -std=c++11 -o main.o -c main.cc
+testwar.o: testwar.cc
+	$(CXX) -g -Wall -pedantic -std=c++11 -o testwar.o -c testwar.cc
+
+war.o: war.cc
+	$(CXX) -g -Wall -pedantic -std=c++11 -o war.o -c war.cc
+
+.PHONY: clean
+clean:
+	rm *.o testwar
